tests/invalids/call1.gt
proc main ()
    int m;
begin
    call id (id);
end
